--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ section .title::after{
 
 /* about section styling */
 .about .title::after{
-    content: "who i am";
+    content: "description";
 }
 .about .about-content .left{
     width: 45%;
@@ -266,7 +266,7 @@ section .title::after{
 .services .title::after,
 .teams .title::after{
     background: #111;
-    content: "my university degrees";
+    content: "******";
 }
 .services .serv-content .card{
     width: calc(33% - 20px);
@@ -279,7 +279,6 @@ section .title::after{
 }
 .services .serv-content .card:hover{
     background: rgb(240, 48, 86);
-    width: calc(35% - 28px);
 }
 .services .serv-content .card .box{
     transition: all 0.3s ease;
@@ -304,7 +303,7 @@ section .title::after{
 /* skills section styling */
 
 .skills .title::after{
-    content: "structuring and programming languages";
+    content: "\\*/*\\*\/";
 }
 .skills .skills-content .column{
     width: calc(50% - 30px);
@@ -378,7 +377,7 @@ section .title::after{
 
 /* teams section styling */
 .teams .title::after{
-    content: "the areas I master";
+    content: "\\*/*\\*\/";
 }
 .teams .carousel .card{
     background: #222;
@@ -440,7 +439,7 @@ section .title::after{
 
 /* contact section styling */
 .contact .title::after{
-    content: "get in touch with me";
+    content: "\\*/*\\*\/";
 }
 .contact .contact-content .column{
     width: calc(50% - 30px);
@@ -692,4 +691,15 @@ footer span a:hover{
     border-radius: 6px;
     cursor: pointer;
     transition: all 0.3s ease;
+}
+
+.link, .formationsLinks {
+    color:rgb(4, 152, 250);
+    cursor: pointer;
+}
+.link, .formationsLinks:hover {
+    color:rgb(0, 0, 0);
+    background-color: floralwhite;
+    font-size: 95%;
+    border-radius: 15%;
 }
