--- a/style.css
+++ b/style.css
@@ -385,7 +385,7 @@ section .title::after{
     padding: 25px 35px;
     text-align: center;
     overflow: hidden;
-    transition: all 0.3s ease;
+    transition: all 0.15s ease;
 }
 .teams .carousel .card:hover{
     background: crimson;
@@ -395,7 +395,7 @@ section .title::after{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transition: all 0.3s ease;
+    transition: all 0.15s ease;
 }
 .teams .carousel .card:hover .box{
     transform: scale(1.05);
@@ -411,7 +411,7 @@ section .title::after{
     object-fit: cover;
     border-radius: 50%;
     border: 5px solid crimson;
-    transition: all 0.3s ease;
+    transition: all 0.15s ease;
 }
 .teams .carousel .card:hover img{
     border-color: #fff;
@@ -697,9 +697,14 @@ footer span a:hover{
     color:rgb(4, 152, 250);
     cursor: pointer;
 }
-.link, .formationsLinks:hover {
+.link:hover, .formationsLinks:hover {
     color:rgb(0, 0, 0);
     background-color: floralwhite;
     font-size: 95%;
     border-radius: 15%;
+}
+
+#icon {
+
+    font-size: 9.28em;
 }
